GROOVY-10240: Support record grammar (detect invalid component names - fix for JDK8)